# CMIP6-Downloader

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily-update.yml
docs/: esgf-history.csv  esgf-status.md
scripts/: daily_update.py
src/cmip6dl/: __init__.py  catalog.py  countries.py  downloader.py
src/cmip6dl/processing/: bias.py
src/cmip6dl/providers/: failover.py  opendap.py
tests/: test_bias.py  test_catalog.py  test_downloader.py
